# kaggle-bank-binary-classification

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: method.md
scripts/legacy/: README.md
scripts/legacy/base_models/: CATBoost_4.py  LGBM_3.py  XGBoost_2.py  XGBoost_3.py  mean_2xgb.py  mean_3lgb.py  mean_4cat.py  rf.py
scripts/legacy/stacking/: ensemblers_cat.py  ensemblers_lgb.py  ensemblers_nn.py  ensemblers_xgb.py
src/bank_marketing/: __init__.py  data.py  features.py  stack.py  train_base.py
