[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-marketing-response"
version = "0.1.0"
description = "Kaggle Playground Series S5E8 银行客户响应营销二分类预测项目"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "lightgbm",
    "xgboost",
    "catboost",
    "torch",
    "matplotlib",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]

